fix scrollbar showing

--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,17 @@
 	box-sizing: border-box;
 }
 
-body,
-html {
+body {
 	line-height: 1.6;
 	/* margin: 0px 100px 0px 100px; */
 	overflow-x: hidden !important;
 	justify-content: center;
 }
-
+@media screen and (max-width: 768px) {
+	html {
+		overflow-x: hidden;
+	}
+}
 /* Font */
 .poppins-thin {
 	font-family: "Poppins", sans-serif;
